# yatir

./: Cargo.toml  README.md
apps/actix-server/: Cargo.toml
apps/actix-server/src/: error.rs  main.rs  prelude.rs  state.rs
apps/actix-server/src/folders/: mod.rs
apps/actix-server/src/users/: mod.rs
apps/cli/: Cargo.toml
core/: Cargo.toml
core/src/: error.rs  lib.rs
data/memory/: Cargo.toml
data/memory/src/: folders.rs  lib.rs  tasks.rs
entities/folders/src/: repo.rs
entities/tasks/: Cargo.toml
entities/tasks/src/: lib.rs  repo.rs
features/folders/: Cargo.toml
features/folders/src/: lib.rs
