[package]
name = "yatir-actix-server"
version = "0.0.0"
authors = ["Vladimir Stepanenko <vovac12@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
yatir-core = { path = "../../core" }
yatir-folders = { path = "../../features/folders" }
yatir-data-memory = { path = "../../data/memory" }
async-std = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = "0.8.3"
dotenv = "0.15"
log = "0.4"
